Use vw insteadof px for crt font size

--- a/templates/shortcodes/crt_with_font_size.html
+++ b/templates/shortcodes/crt_with_font_size.html
@@ -1,3 +1,3 @@
-<div class="crt scanlines" style="font-size: 12px;">
+<div class="crt scanlines" style="font-size: 0.6vw;">
   {{ body | markdown | safe }}
 </div>
