Fix footer theme button styling in Safari and cache-bust CSS

--- a/static/site.css
+++ b/static/site.css
@@ -241,6 +241,8 @@ pre {
 }
 
 .theme-btn {
+  -webkit-appearance: none;
+  appearance: none;
   border: 1px solid transparent;
   font: inherit;
   font-size: 0.82rem;
