--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
   </script>
   <link rel="icon" type="image/png" href="/favicon.png">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-  <link rel="stylesheet" href="/site.css">
+  <link rel="stylesheet" href="{{ get_url(path='site.css', cachebust=true) }}">
 </head>
 <body>
   <div class="screen-noise"></div>
