--- a/templates/base.html
+++ b/templates/base.html
@@ -27,8 +27,10 @@
       } catch (e) {}
     })();
   </script>
-  <link rel="icon" type="image/png" href="/favicon.png">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/svg+xml" href="{{ get_url(path='favicon.svg', cachebust=true) }}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ get_url(path='favicon-32.png', cachebust=true) }}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{ get_url(path='favicon-16.png', cachebust=true) }}">
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ get_url(path='apple-touch-icon.png', cachebust=true) }}">
   <link rel="stylesheet" href="{{ get_url(path='site.css', cachebust=true) }}">
 </head>
 <body>
